Add a DTO for limit reductions values with metadata
Signed-off-by: Slimane AMAR <amarsli@gm0winl104.bureau.si.interne>